# contextduty

./: .contextduty.json  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE.md  LICENSE  LIVE_DEMO.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  USER_GUIDE.md  ci.yml  contextduty-demo.cast  hipaa-baseline.json  install-pre-commit-hook.sh  pyproject.toml  sample.txt  soc2-baseline.json
.github/: CODEOWNERS  acl  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: pre-push
.github/workflows/: ci.yml  contextduty.yml  post-merge.yml  publish.yml  security.yml
demo/: contextduty-pitch.html  demo.sh  demo_hooks.sh  hn-post.md  input.txt  real_demo.sh  record-demo.sh
demo/launch/: mcp-marketplace-submission.md  outreach-cursor.md  outreach-gitguardian.md  reddit-cursor.md  reddit-netsec.md  show-hn.md
demo/live/: input.txt
demo/live/policies/: custom-policy.json  org-baseline.json  strict-bad-policy.json  team-policy.json  user-policy.json
demo/real/: .env
demo/real/config/: settings.py
demo/real/scripts/: deploy.sh
docs/: USER_MANUAL.md
examples/: notebook_guard.ipynb
policies/: hipaa-baseline.json  soc2-baseline.json
scripts/: live_demo.sh
src/contextduty/: __init__.py  audit.py  cli.py  config.py  cursor.py  dashboard.py  demo.py  detectors.py  dirscanner.py  engine.py  feed.py  githistory.py  hooks.py  interceptor.py  mcp_server.py  notebook.py  policy.py  protect.py  proxy.py  proxy_addon.py
src/contextduty/adapters/: __init__.py  ide.py
src/contextduty/core/: __init__.py  exceptions.py
src/contextduty/proxy/: __init__.py  addon.py  ca.py  feed.py  interceptor.py  scope.py  server.py  system.py
src/contextduty/ui/: __init__.py  output.py
tests/: test_audit.py  test_cli.py  test_cursor.py  test_dashboard.py  test_detectors.py  test_engine.py  test_hooks.py  test_interceptor.py  test_notebook.py  test_notebook_api.py  test_per_detector_modes.py  test_policy.py  test_protect.py  test_proxy_addon.py
