[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextduty"
version = "0.2.5"
description = "Policy-driven context firewall for AI workflows — scan and redact sensitive data before prompts, logs, or traces leave your environment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "ContextDuty Contributors", email = "shubhagytajayswal@gmail.com" }
]
keywords = [
  "security", "pii", "redaction", "ai", "llm", "mcp",
  "prompt", "privacy", "devsecops", "secrets"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
"Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
proxy = ["mitmproxy>=10.0"]
all = ["mitmproxy>=10.0"]

[project.urls]
Homepage = "https://github.com/SHUBHAGYTA24/contextduty"
Repository = "https://github.com/SHUBHAGYTA24/contextduty"
"Bug Tracker" = "https://github.com/SHUBHAGYTA24/contextduty/issues"
Changelog = "https://github.com/SHUBHAGYTA24/contextduty/blob/main/CHANGELOG.md"

[project.scripts]
contextduty = "contextduty.cli:main"
contextduty-mcp = "contextduty.mcp_server:main"
contextduty-dashboard = "contextduty.cli:main"
contextduty-pre-commit = "contextduty.hooks:main_pre_commit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"src/contextduty/dashboard.py" = ["E501"]
"src/contextduty/demo.py" = ["E501"]
"src/contextduty/cli.py" = ["E501"]
"src/contextduty/cursor.py" = ["E501"]
"src/contextduty/protect.py" = ["E501"]
"src/contextduty/policy.py" = ["E501"]
"src/contextduty/proxy/addon.py" = ["E501"]
"src/contextduty/proxy/interceptor.py" = ["E501"]
"src/contextduty/proxy/feed.py" = ["E501"]
"tests/test_cursor.py" = ["E501"]
"tests/test_protect.py" = ["E501"]
